--- a/main.html
+++ b/main.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main</title>
-    <link rel="stylesheet" href="main.css" />
+    <!-- <link rel="stylesheet" href="main.css" /> -->
+    <style>
+      .head_section {
+        text-align: center;
+      }
+
+      .card_section {
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+      }
+
+      .card_img {
+        width: 300px;
+        height: 300px;
+      }
+    </style>
   </head>
   <body>
     <section class="head_section">
