--- a/main.html
+++ b/main.html
@@ -9,19 +9,16 @@
       .head_section {
         text-align: center;
       }
-
       .card_section {
         display: flex;
         justify-content: space-around;
       }
-
       .card {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 5px;
       }
-
       .card_img {
         width: 300px;
         height: 300px;
@@ -36,7 +33,7 @@
         Enjoy your shopping.
         <br />
         <br />
-        <a href="./orderList.html">order list</a>
+        <a href="http://localhost:8888/orderlist">order list</a>
       </div>
     </section>
     <section class="card_section">
@@ -47,7 +44,7 @@
           class="card_button"
           type="button"
           value="order"
-          onclick="alert(1)"
+          onclick="location.href='/order?productId=1'"
         />
       </div>
       <div class="card">
@@ -57,7 +54,7 @@
           class="card_button"
           type="button"
           value="order"
-          onclick="alert(2)"
+          onclick="location.href='/order?productId=2'"
         />
       </div>
       <div class="card">
@@ -67,7 +64,7 @@
           class="card_button"
           type="button"
           value="order"
-          onclick="alert(3)"
+          onclick="location.href='/order?productId=3'"
         />
       </div>
     </section>
